--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Index.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Index.cshtml
@@ -43,7 +43,7 @@
                     </td>
                     <td class="action-cell">
                         <a href='@Url.Action("Edit", new { userId = item.Id })'>
-                            <span class="glyphicon glyphicon-pencil"><!----></span>
+                            <span class="glyphicon glyphicon-pencil"></span>
                         </a>
                     </td>
                 </tr>
@@ -54,7 +54,7 @@
 
         <h2>Options</h2>
 
-        <a href='@Url.Action("Register", "Account")' class="fancy-button"><span class="glyphicon glyphicon-plus"><!----></span> Créer un utilisateur</a>
+        <a href='@Url.Action("Register", "Account")' class="fancy-button"><span class="glyphicon glyphicon-plus"></span> Créer un utilisateur</a>
         <a href='@Url.Action("ConsoleAdmin", "Accueil")' class="fancy-button rouge">Retour</a>
 
     </div>
