--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/_PartialList.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/_PartialList.cshtml
@@ -37,7 +37,7 @@
                 @if (valide)
                 {
                     <a href='@Url.Action("Edit", new { idProgramme = item.idProgramme })'>
-                        <span class="glyphicon glyphicon-pencil"><!----></span>
+                        <span class="glyphicon glyphicon-pencil"></span>
                     </a>
                 }
             </td>
@@ -45,7 +45,7 @@
                 @if(valide)
                 {
                     <a href='@Url.Action("DeleteConfirmed", new { idProgramme = item.idProgramme })'>
-                        <span class="glyphicon glyphicon-trash"><!----></span>
+                        <span class="glyphicon glyphicon-trash"></span>
                     </a>
                 }
             </td>
