--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Create.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Create.cshtml
@@ -1,37 +1,31 @@
 ﻿@model ApplicationPlanCadre.Models.ElementCompetence
 
 @{
-    ViewBag.Title = "Élément de compétence - création";
+    ViewBag.Title = "Création d'un nouvel élément de compétence";
 }
 
-<div class="container">
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-        @Html.HiddenFor(model => model.idCompetence)
+    <div class="container">
+        <div class="form-box">
+            
+            <header class="light-header">
 
-        <div class="form-horizontal form-box single">
-            <h1>Créer un élément de compétence</h1>
+                <h1>@ViewBag.Title</h1>
 
-            <hr />
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.TextAreaFor(model => model.description, new {@rows = "3", @maxlength = "300", @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
-                </div>
-            </div>
+            </header>
 
             <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Suivant" class="fancy-button"/>
-                    <div class="fancy-button rouge" onclick="location.href='@Url.Action("Info", "EnonceCompetence", new { idCompetence = Model.idCompetence })'">Annuler</div>
-                </div>
+                @Html.LabelFor(m => m.description)
+                @Html.TextAreaFor(m => m.description, new {@rows = "3", @maxlength = "300", @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.description, "", new { @class = "text-danger" })
             </div>
+
+            <input type="submit" value="Suivant" class="fancy-button"/>
+            <div class="fancy-button rouge" onclick="location.href='@Url.Action("Info", "EnonceCompetence", new { idCompetence = Model.idCompetence })'">Annuler</div>
+
         </div>
-        
-    }
-
-</div>
+    </div>
+}
