--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/GrilleCours/Index.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/GrilleCours/Index.cshtml
@@ -11,7 +11,7 @@
         <div id="info-header">
 
             <h1>Gestion des grilles</h1>
-            <div class="fancy-button edit" onclick="location.href='@Url.Action("Create","grilleCours")'"><span class="glyphicon glyphicon-plus"><!----></span> Ajouter</div>
+            <div class="fancy-button edit" onclick="location.href='@Url.Action("Create","grilleCours")'"><span class="glyphicon glyphicon-plus"></span> Ajouter</div>
 
 
             <hr />
