--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/GrilleCours/Info.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/GrilleCours/Info.cshtml
@@ -20,9 +20,9 @@
             <h3>Grille de cours : @Model.nom</h3> 
         <div>
             <h1>@ViewBag.nom</h1>
-            <div class="fancy-button edit" onclick="location.href='@Url.Action("Edit", "grilleCours", new { id = Model.idGrille })'"><span class="glyphicon glyphicon-pencil"><!----></span> Modifier</div>
-            <div class="fancy-button edit" onclick="location.href='@Url.Action("Delete", "grilleCours", new { id = Model.idGrille })'"><span class="glyphicon glyphicon-trash"><!----></span> Supprimer</div>
-            <div class="fancy-button edit" data-toggle="collapse" id="collapse"><span class="glyphicon glyphicon-eye-open"><!----></span> Afficher les cours de formation générale</div>
+            <div class="fancy-button edit" onclick="location.href='@Url.Action("Edit", "grilleCours", new { id = Model.idGrille })'"><span class="glyphicon glyphicon-pencil"></span> Modifier</div>
+            <div class="fancy-button edit" onclick="location.href='@Url.Action("Delete", "grilleCours", new { id = Model.idGrille })'"><span class="glyphicon glyphicon-trash"></span> Supprimer</div>
+            <div class="fancy-button edit" data-toggle="collapse" id="collapse"><span class="glyphicon glyphicon-eye-open"></span> Afficher les cours de formation générale</div>
 
         </div>
         <hr />
