--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Shared/_Layout.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
 
                 <div id="nav-button" data-toggle="collapse" data-target="#nav" class="layout-button"><span class="glyphicon glyphicon-th-large"></span></div>
 
-                <a href='@Url.Action("Index", "Accueil")'><div class="logo"><!----></div></a>
+                <a href='@Url.Action("Index", "Accueil")'><div class="logo"></div></a>
 
                 @Html.Partial("_LoginPartial")
 
