--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/table.css
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/table.css
@@ -44,6 +44,7 @@ table.cool-table .action-cell-header {
 }
 
 table.cool-table .action-cell {
+    padding: 0;
     width: 10%;
     text-align: center;
     border-left: 1px solid #707070;
