--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleDevisMinistere/_PartialList.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleDevisMinistere/_PartialList.cshtml
@@ -38,7 +38,7 @@
                 @if (valide)
                 {
                     <a href='@Url.Action("Edit", new { id = item.idDevis })'>
-                        <span class="glyphicon glyphicon-pencil"><!----></span>
+                        <span class="glyphicon glyphicon-pencil"></span>
                     </a>
                 }
             </td>
@@ -46,7 +46,7 @@
                 @if(valide)
                 {
                     <a href='@Url.Action("DeleteConfirmed", new { id = item.idDevis })'>
-                        <span class="glyphicon glyphicon-trash"><!----></span>
+                        <span class="glyphicon glyphicon-trash"></span>
                     </a>
                 }
             </td>
