--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ContexteRealisation/_PartialList.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ContexteRealisation/_PartialList.cshtml
@@ -1,49 +1,46 @@
 ﻿@model IEnumerable<ApplicationPlanCadre.Models.ContexteRealisation>
 
-<div class="crud-list">
+<table class="cool-table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(m => m.description)
+        </th>
+        <th class="action-cell-header">
+            <b>Modifier</b>
+        </th>
+        <th class="action-cell-header">
+            <b>Supprimer</b>
+        </th>
+        <th class="action-cell-header">
+            <b>Déplacer</b>
+        </th>
+    </tr>
 
-    <table>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.description)
-            </th>
-            <th class="action-cell-header">
-                <b>Modifier</b>
-            </th>
-            <th class="action-cell-header">
-                <b>Supprimer</b>
-            </th>
-            <th class="action-cell-header">
-                <b>Déplacer</b>
-            </th>
+    @foreach (var item in Model.OrderBy(e => e.numero))
+    {
+        string dblclickEvent = Url.Action("Edit", new { idContexte = item.idContexte });
+        <tr ondblclick="location.href='@dblclickEvent'">
+            <td>
+                @Html.DisplayFor(m => item.description)
+            </td>
+            <td class="action-cell">
+                <a href='@Url.Action("Edit", new { idContexte = item.idContexte })'>
+                    <span class="glyphicon glyphicon-pencil"></span>
+                </a>
+            </td>
+            <td class="action-cell">
+                <a href='@Url.Action("Delete", new { idContexte = item.idContexte })'>
+                    <span class="glyphicon glyphicon-trash"></span>
+                </a>
+            </td>
+            <td class="action-cell">
+                <a href='@Url.Action("MoveUp", new { idContexte = item.idContexte })'>
+                    <span class="glyphicon glyphicon-arrow-up"></span>
+                </a>
+                <a href='@Url.Action("MoveDown", new { idContexte = item.idContexte })'>
+                    <span class="glyphicon glyphicon-arrow-down"></span>
+                </a>
+            </td>
         </tr>
-
-        @foreach (var item in Model.OrderBy(m => m.numero))
-        {
-            string dblclickEvent = Url.Action("Edit", new { idContexte = item.idContexte });
-            <tr ondblclick="location.href='@dblclickEvent'">
-                <td>
-                    @Html.DisplayFor(modelItem => item.description)
-                </td>
-                <td class="action-cell">
-                    <a href='@Url.Action("Edit", new { idContexte = item.idContexte })'>
-                        <span class="glyphicon glyphicon-pencil"><!----></span>
-                    </a>
-                </td>
-                <td class="action-cell">
-                    <a href='@Url.Action("Delete", new { idContexte = item.idContexte })'>
-                        <span class="glyphicon glyphicon-trash"><!----></span>
-                    </a>
-                </td>
-                <td class="action-cell">
-                    <a href='@Url.Action("MoveUp", new { idContexte = item.idContexte })'>
-                        <span class="glyphicon glyphicon-arrow-up"><!----></span>
-                    </a>
-                    <a href='@Url.Action("MoveDown", new { idContexte = item.idContexte })'>
-                        <span class="glyphicon glyphicon-arrow-down"><!----></span>
-                    </a>
-                </td>
-            </tr>
-        }
-    </table>
-</div>
+    }
+</table>
