--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/CriterePerformance/Create.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/CriterePerformance/Create.cshtml
@@ -1,39 +1,44 @@
 ﻿@model ApplicationPlanCadre.Models.CriterePerformance
 
 @{
-    ViewBag.Title = "List";
+    ViewBag.Title = "Gérer les critères de performance";
 }
 
-<div class="container">
+@using (Html.BeginForm("Create", "CriterePerformance"))
+{
+    @Html.AntiForgeryToken()
+    @Html.HiddenFor(m => m.idElement)
 
-    @using (Html.BeginForm("Create", "CriterePerformance"))
-    {
-        @Html.AntiForgeryToken()
-        @Html.HiddenFor(model => model.idElement)
+    <div class="container">
+        <div class="form-box">
+            
+            <header class="light-header">
 
-        <div class="horizontal-form">
+                <h3>@Html.DisplayFor(m => m.ElementCompetence.description)</h3>
 
-            <h1>@Model.ElementCompetence.description</h1>
+                <h1>@ViewBag.Title</h1>
+
+            </header>
+
+            <div class="field-box">
+
+                <p>Création d'un critère de performance</p>
+                <hr />
+
+                <div class="form-group">
+                    @Html.TextAreaFor(m => m.description, new { @rows = "3", @maxlength = "300", @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.description, "", new { @class = "text-danger" })
+                </div>
+
+                <input type="submit" value="Ajouter" class="fancy-button" />
+
+            </div>
+
+            @Html.Action("_PartialList")
 
             <hr />
+            <a href='@Url.Action("Info", "ElementCompetence", new { idElement = Model.idElement })' class="fancy-button rouge">Terminer</a>
 
-            <h3>Ajouter un nouveau critère de performance</h3>
-
-            <div class="form-group">
-                @Html.TextAreaFor(model => model.description, new { @rows = "3", @maxlength = "300", @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Ajouter" class="fancy-button"/>
-            </div>
         </div>
-    }
-    
-    <hr />
-
-    @Html.Action("_PartialList")
-
-    <div class="champ">
-        <a href='@Url.Action("Info", "ElementCompetence", new { idElement = Model.idElement })' class="fancy-button rouge">Terminer</a>
     </div>
-</div>
+}
