--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/CriterePerformance/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/CriterePerformance/Edit.cshtml
@@ -1,31 +1,33 @@
 ﻿@model ApplicationPlanCadre.Models.CriterePerformance
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Modification d'un critère de performance";
 }
 
-<div class="container">
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    @Html.HiddenFor(m => m.numero)
+    @Html.HiddenFor(m => m.idElement)
 
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-        @Html.HiddenFor(model => model.idCritere)
-        @Html.HiddenFor(model => model.numero)
-        @Html.HiddenFor(model => model.idElement)
+    <div class="container">
+        <div class="form-box">
 
-        <div class="horizontal-form form-box single">
+            <header class="light-header">
 
-            <h3>Modifier un critère de performance</h3>
+                <h1>@ViewBag.Title</h1>
+
+            </header>
 
             <div class="form-group">
-                @Html.TextAreaFor(model => model.description, new { @rows = "3", @maxlength = "300", @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
+                @Html.TextAreaFor(m => m.description, new { @rows = "3", @maxlength = "300", @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.description, "", new { @class = "text-danger" })
             </div>
-            <div class="form-group">
-                <input type="submit" value="Confirmer" class="fancy-button" />
-                <a href='@Url.Action("Create", new { idElement = Model.idElement })' class="fancy-button rouge">Annuler</a>
-            </div>
+
+            <input type="submit" value="Confirmer" class="fancy-button" />
+            <a href='@Url.Action("Create", new { idElement = Model.idElement })' class="fancy-button rouge">Annuler</a>
+
         </div>
-    }
+    </div>
 
-</div>
+}
