--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/DevisMinistere/Index.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/DevisMinistere/Index.cshtml
@@ -14,6 +14,11 @@
 
     </header>
 
+    @if(Model.Count() == 0)
+    {
+        <p>Aucun devis de votre département à été trouvé dans le système, veuillez contacter un administrateur.</p>
+    }
+
     @foreach (var devisMinistere in Model)
     {                                       
         <a class="info-child clearfix" href='@Url.Action("Info", new { idDevis = devisMinistere.idDevis })'>
