--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Delete.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Delete.cshtml
@@ -1,28 +1,33 @@
 ﻿@model ApplicationPlanCadre.Models.ElementCompetence
+
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Suppression d'un élément de compétence";
 }
 
-<div class="container">
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
-    <div class="form-horizontal single">
+    <div class="container">
+        <div class="form-box">
 
-        <h1>Supprimer un élément de compétence</h1>
-        <h3>@Model.description</h3>
+            <header class="light-header">
 
-        <hr />
+                <h1>@ViewBag.Title</h1>
 
-        <div class="col-md-12">
-            <p>Êtes vous certain de vouloir supprimer cette compétence?</p>
-        </div>
+                <h3>@Html.DisplayFor(m => m.description)</h3>
 
-        <div class="form-group">
-            <div class="col-md-12">
-                <a class="fancy-button" href='@Url.Action("DeleteConfirmed", new { idElement = Model.idElement })'>Confirmer</a>
-                <div class="fancy-button rouge" onclick="location.href='@Url.Action("Info", "EnonceCompetence", new { idElement = Model.idElement })'">Annuler</div>
-            </div>
+            </header>
+
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+            <p>Êtes-vous certain de vouloir supprimer cet élément de compétence?</p>
+
+            <hr />
+
+            <input type="submit" value="Confirmer" class="fancy-button" />
+            <div class="fancy-button rouge" onclick="location.href='@Url.Action("Info", "ElementCompetence", new { idElement = Model.idElement })'">Annuler</div>
+
         </div>
     </div>
-
-</div>
-
+}
