--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Info.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Info.cshtml
@@ -21,9 +21,9 @@
         <h2>Critères de performance</h2>
 
         <ol type="1">
-            @foreach (var criterePerformance in Model.CriterePerformance.OrderBy(ec => ec.numero))
+            @foreach (var criterePerformance in Model.CriterePerformance.OrderBy(e => e.numero))
             {
-                <li>@Html.DisplayFor(cp => criterePerformance.description)</li>
+                <li>@Html.DisplayFor(m => criterePerformance.description)</li>
             }
         </ol>
 
@@ -32,8 +32,8 @@
 
     <h2>Options</h2>
 
-    <a class="fancy-button" href='@Url.Action("Edit", new { idElement = Model.idElement })'><span class="glyphicon glyphicon-pencil"><!----></span> Modifier</a>
-    <a class="fancy-button" onclick="location.href='@Url.Action("Delete", new { idElement = Model.idElement })'"><span class="glyphicon glyphicon-trash"><!----></span> Supprimer l'élément</a>
+    <a class="fancy-button" href='@Url.Action("Edit", new { idElement = Model.idElement })'><span class="glyphicon glyphicon-pencil"></span> Modifier</a>
+    <a class="fancy-button" onclick="location.href='@Url.Action("Delete", new { idElement = Model.idElement })'"><span class="glyphicon glyphicon-trash"></span> Supprimer l'élément</a>
     <a class="fancy-button rouge" onclick="location.href='@Url.Action("Info", "EnonceCompetence", new { idCompetence = Model.idCompetence })'">Retour</a>
 
 </div>
