--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Order.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Order.cshtml
@@ -1,52 +1,58 @@
 ﻿@model ApplicationPlanCadre.Models.EnonceCompetence
 
 @{
-    ViewBag.Title = "Order";
+    ViewBag.Title = "Changer l'ordre des éléments";
 }
 
 <div class="container">
+    <div class="form-box">
 
-    <h1></h1>
+        <header class="light-header">
 
-    <div class="crud-list">
+            <h1>@ViewBag.Title</h1>
 
-        <table>
+        </header>
+
+        <table class="cool-table">
+
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => Model.ElementCompetence.First().numero)
+                    @Html.DisplayNameFor(m => Model.ElementCompetence.First().numero)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => Model.ElementCompetence.First().description)
+                    @Html.DisplayNameFor(m => Model.ElementCompetence.First().description)
                 </th>
                 <th class="action-cell-header">
                     <b>Déplacer</b>
                 </th>
             </tr>
 
-            @foreach (var elementCompetence in Model.ElementCompetence.OrderBy(ec => ec.numero))
+            @foreach (var elementCompetence in Model.ElementCompetence.OrderBy(e => e.numero))
             {
-                <tr class="valide">
+                <tr>
                     <td>
-                        @Html.DisplayFor(el => elementCompetence.numero)
+                        @Html.DisplayFor(m => elementCompetence.numero)
                     </td>
                     <td>
-                        @Html.DisplayFor(el => elementCompetence.description)
+                        @Html.DisplayFor(m => elementCompetence.description)
                     </td>
                     <td class="action-cell">
                         <a href='@Url.Action("MoveUp", "ElementCompetence", new { idElement = elementCompetence.idElement })'>
-                            <span class="glyphicon glyphicon glyphicon-arrow-up"><!----></span>
+                            <span class="glyphicon glyphicon glyphicon-arrow-up"></span>
                         </a>
                         <a href='@Url.Action("MoveDown", "ElementCompetence", new { idElement = elementCompetence.idElement })'>
-                            <span class="glyphicon glyphicon glyphicon-arrow-down"><!----></span>
+                            <span class="glyphicon glyphicon glyphicon-arrow-down"></span>
                         </a>
                     </td>
                 </tr>
             }
+
         </table>
+
+        <hr />
+        <a href='@Url.Action("Info", "EnonceCompetence", new { idCompetence = Model.idCompetence })' class="fancy-button rouge">Retour</a>
+
     </div>
 
-    <div class="champ">
-        <a href='@Url.Action("Info", "EnonceCompetence", new { idCompetence = Model.idCompetence })' class="fancy-button rouge">Retour</a>
-    </div>
 </div>
 
