--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Info.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Info.cshtml
@@ -46,12 +46,12 @@
 
     <h2>Options</h2>
 
-    <a class="fancy-button" onclick="location.href='@Url.Action("Edit", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-pencil"><!----></span> Modifier</a>
-    <a class="fancy-button" onclick="location.href='@Url.Action("Create", "ElementCompetence", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-plus"><!----></span> Ajouter un élément</a>
-    <a class="fancy-button" onclick="location.href='@Url.Action("Delete", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-trash"><!----></span> Supprimer l'énoncé</a>
+    <a class="fancy-button" onclick="location.href='@Url.Action("Edit", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-pencil"></span> Modifier</a>
+    <a class="fancy-button" onclick="location.href='@Url.Action("Create", "ElementCompetence", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-plus"></span> Ajouter un élément</a>
+    <a class="fancy-button" onclick="location.href='@Url.Action("Delete", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-trash"></span> Supprimer l'énoncé</a>
     @if (Model.ElementCompetence.Count() > 1)
     {
-        <a class="fancy-button" onclick="location.href='@Url.Action("Order", "ElementCompetence", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-sort"><!----></span> Changer l'ordre des éléments</a>
+        <a class="fancy-button" onclick="location.href='@Url.Action("Order", "ElementCompetence", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-sort"></span> Changer l'ordre des éléments</a>
     }
     <a class="fancy-button rouge" onclick="location.href='@Url.Action("Info", "DevisMinistere", new { idDevis = Model.idDevis })'">Retour</a>
 
