--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Manage/ChangePassword.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Manage/ChangePassword.cshtml
@@ -3,45 +3,45 @@
     ViewBag.Title = "Changer le mot de passe";
 }
 
-@using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { role = "form" }))
 {
     @Html.AntiForgeryToken()
 
-    <div class="container single">
+    <div class="container">
+        <div class="form-box">
 
-        <h1>@ViewBag.Title</h1>
+            <header class="light-header">
 
-        <hr />
+                <h1>@ViewBag.Title</h1>
 
-        @Html.ValidationSummary("", new { @class = "text-danger" })
+            </header>
 
-        <div class="form-group">
-            @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-            <div class="col-md-6">
-                @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+            @Html.ValidationSummary("", new { @class = "text-danger" })
+
+            <div class="row">
+                <div class="col-md-4">
+
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.OldPassword)
+                        @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.NewPassword)
+                        @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.ConfirmPassword)
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                    </div>
+
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-            <div class="col-md-6">
-                @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
-            </div>
-        </div>
+            <hr />
+            <input type="submit" value="Confirmer" class="fancy-button" />
 
-        <div class="form-group">
-            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-            <div class="col-md-6">
-                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-            </div>
         </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Confirmer" class="fancy-button" />
-            </div>
-        </div>
-
     </div>
-
 }
