--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Index.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Index.cshtml
@@ -14,6 +14,11 @@
 
     </header>
 
+    @if (Model.Count() == 0)
+    {
+        <p>Aucun programme de votre département à été trouvé dans le système, veuillez contacter un administrateur.</p>
+    }
+
     @foreach (var programme in Model)
     {
         <a class="info-child clearfix" href='@Url.Action("Info", "Programme", new { idProgramme = programme.idProgramme })'>
