--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Edit.cshtml
@@ -22,6 +22,10 @@
 
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
+                    @Html.ValidationMessage("rolePresent", new { @class = "text-danger" })
+
+                    @Html.ValidationMessage("programmeRCP", new { @class = "text-danger" })
+
                     <div class="form-group">
                         <div class="row">
                             <div class="col-md-6">
@@ -30,7 +34,7 @@
                                 @Html.ValidationMessageFor(m => m.Prenom, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-md-6">
-                                @Html.LabelFor(m => m.Nom, new { @class = "col-md-1 control-label" })
+                                @Html.LabelFor(m => m.Nom)
                                 @Html.TextBoxFor(m => m.Nom, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(m => m.Nom, "", new { @class = "text-danger" })
                             </div>
@@ -57,10 +61,10 @@
                                 <hr />
 
                                 <div class="form-group">
-                                    @Html.DropDownList("roles", null, new { @class = "form-control", @onchange = "addRole()" })
+                                    @Html.DropDownList("role", null, new { @class = "form-control", @onchange = "addRole()" })
                                 </div>
 
-                                <div id="rolesBox">
+                                <div id="roleBox">
 
                                 </div>
 
@@ -76,6 +80,14 @@
 
                                 <p>Assigner un programme au RCP</p>
                                 <hr />
+
+                                <div class="form-group">
+                                    @Html.DropDownList("codeProgramme", null, new { @class = "form-control", @onchange = "addCodeProgramme()" })
+                                </div>
+
+                                <div id="codeProgrammeBox">
+
+                                </div>
 
                             </div>
                         </div>
